[package]
name = "del-dtri"
version = "0.1.1"
edition = "2021"
authors = ["Nobuyuki Umetani <n.umetani@gmail.com>"]
license = "MIT"
repository = "https://github.com/nobuyuki83/del-dtri"
description = "dynamic triangle mesh library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.2"
num-traits = "0.2.15"