[package]
name = "del-dtri"
version = "0.1.4"
edition = "2021"
authors = ["Nobuyuki Umetani <n.umetani@gmail.com>"]
license = "MIT"
repository = "https://github.com/nobuyuki83/del-dtri"
description = "dynamic triangle mesh library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.4"
num-traits = "0.2.18"
del-geo = "0.1.20"
# del-geo = {path="../del-geo"}

[dev-dependencies]
del-msh = "0.1.25"